--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,8 +14,8 @@ html
         ul(class='navbar-nav ml-auto mt-2 mt-lg-0')
           li(class='nav-item active')
             a(class='nav-link', href='#') Current Weather
-        form(class='form-inline my-2 my-lg-0')
-          input(class='form-control mr-sm-2', type='search', placeholder='Search')
+        form(class='form-inline my-2 my-lg-0', method='post')
+          input(class='form-control mr-sm-2', type='search', placeholder='Search', name='location')
           button(class='btn btn-outline-success my-2 my-sm-0', type='submit') Search
     div(class='container')
       div(class='row')
