--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,41 @@ html
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css', integrity='sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z', crossorigin='anonymous')
+    script(src='https://kit.fontawesome.com/7d1775ef35.js', crossorigin='anonymous')
   body
+    script.
+      window.onload=function(){
+        function geoFindMe() {
+          if('geolocation' in navigator) {
+            console.log('geolocation available');
+            navigator.geolocation.getCurrentPosition((position) => {
+              const latitude = position.coords.latitude;
+              const longitude = position.coords.longitude;
+
+              const data = {latitude, longitude};
+              const options = {
+                method: 'POST',
+                headers: {
+                  'Content-Type': 'application/json'
+                  },
+                body: JSON.stringify(data)
+                }
+              fetch('/geolocationweather', options)
+              .then(response => response.json())
+              .then(data => {
+                console.log('Success:', data);
+              })
+              .catch((error) => {
+                console.error('Error:', error);
+              });
+            });
+          } else {
+            console.log('geolocation not available');
+          }
+        }
+        document.getElementById('my-location').addEventListener('click', geoFindMe);
+      }
+
     nav(class='navbar navbar-expand-lg navbar-light bg-light')
       a(class='navbar-brand', href='#') Weather-App
       button(class='navbar-toggler', type='button', data-toggle='collapse', data-target='#navbarTogglerDemo02', aria-controls='navbarTogglerDemo02', aria-expanded='false', aria-label='Toggle navigation')
@@ -13,13 +47,14 @@ html
       div(class='collapse navbar-collapse', id='navbarTogglerDemo02')
         ul(class='navbar-nav ml-auto mt-2 mt-lg-0')
           li(class='nav-item active')
-            a(class='nav-link', href='#') Current Weather
+            button(id='my-location', class='btn btn-outline-success my-2 my-sm-0', type='submit') Current Weather&nbsp
+              i(class='fas fa-map-marker-alt')
         form(class='form-inline my-2 my-lg-0', method='post')
           input(class='form-control mr-sm-2', type='search', placeholder='Search', name='location')
           button(class='btn btn-outline-success my-2 my-sm-0', type='submit') Search
-    div(class='container')
-      div(class='row')
-        div(class='col')
+    main(role='main', class='container')
+      div(class='container')
+        section(class='content')
           block content
     footer(class='main-footer')
         div(class='container')
