--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,53 +5,21 @@ html
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css', integrity='sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z', crossorigin='anonymous')
+    link(rel='stylesheet', type='text/css', href='/styles/style.css')
     script(src='https://kit.fontawesome.com/7d1775ef35.js', crossorigin='anonymous')
   body
-    script.
-      window.onload=function(){
-        function geoFindMe() {
-          if('geolocation' in navigator) {
-            console.log('geolocation available');
-            navigator.geolocation.getCurrentPosition((position) => {
-              const latitude = position.coords.latitude;
-              const longitude = position.coords.longitude;
-
-              const data = {latitude, longitude};
-              const options = {
-                method: 'POST',
-                headers: {
-                  'Content-Type': 'application/json'
-                  },
-                body: JSON.stringify(data)
-                }
-              fetch('/geolocationweather', options)
-              .then(response => response.json())
-              .then(data => {
-                console.log('Success:', data);
-              })
-              .catch((error) => {
-                console.error('Error:', error);
-              });
-            });
-          } else {
-            console.log('geolocation not available');
-          }
-        }
-        document.getElementById('my-location').addEventListener('click', geoFindMe);
-      }
-
-    nav(class='navbar navbar-expand-lg navbar-light bg-light')
+    nav(class='navbar navbar-expand-lg navbar-dark bg-dark')
       a(class='navbar-brand', href='#') Weather-App
       button(class='navbar-toggler', type='button', data-toggle='collapse', data-target='#navbarTogglerDemo02', aria-controls='navbarTogglerDemo02', aria-expanded='false', aria-label='Toggle navigation')
         span(class='navbar-toggler-icon')
       div(class='collapse navbar-collapse', id='navbarTogglerDemo02')
         ul(class='navbar-nav ml-auto mt-2 mt-lg-0')
           li(class='nav-item active')
-            button(id='my-location', class='btn btn-outline-success my-2 my-sm-0', type='submit') Current Weather&nbsp
+            button(id='get-location', class='btn my-2 my-sm-0', style='color: white;', type='submit') Current Weather&nbsp
               i(class='fas fa-map-marker-alt')
         form(class='form-inline my-2 my-lg-0', method='post')
           input(class='form-control mr-sm-2', type='search', placeholder='Search', name='location')
-          button(class='btn btn-outline-success my-2 my-sm-0', type='submit') Search
+          button(class='btn btn-light btn-outline-primary my-2 my-sm-0', type='submit') Search
     main(role='main', class='container')
       div(class='container')
         section(class='content')
@@ -59,7 +27,8 @@ html
     footer(class='main-footer')
         div(class='container')
             div(class='row text-center')
-                div(class='col') &copy; Nicholas Ngare. All rights reserved.
+                div(class='col fixed-bottom') &copy; Nicholas Ngare. All rights reserved.
     script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js', integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj', crossorigin='anonymous')
     script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js', integrity='sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN', crossorigin='anonymous')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js', integrity='sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV', crossorigin='anonymous')
+    script(src='/scripts/main.js', type='text/javascript')
