--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,8 +8,8 @@ html
     link(rel='stylesheet', type='text/css', href='/styles/style.css')
     script(src='https://kit.fontawesome.com/7d1775ef35.js', crossorigin='anonymous')
   body
-    nav(class='navbar navbar-expand-lg navbar-dark bg-dark')
-      a(class='navbar-brand', href='#') Weather-App
+    nav(class='navbar navbar-expand-lg navbar-dark')
+      a(class='navbar-brand', href='/') Weather-App
       button(class='navbar-toggler', type='button', data-toggle='collapse', data-target='#navbarTogglerDemo02', aria-controls='navbarTogglerDemo02', aria-expanded='false', aria-label='Toggle navigation')
         span(class='navbar-toggler-icon')
       div(class='collapse navbar-collapse', id='navbarTogglerDemo02')
@@ -17,17 +17,263 @@ html
           li(class='nav-item active')
             button(id='get-location', class='btn my-2 my-sm-0', style='color: white;', type='submit') Current Weather&nbsp
               i(class='fas fa-map-marker-alt')
-        form(class='form-inline my-2 my-lg-0', method='post')
+        form(class='form-inline my-2 my-lg-0', method='get')
           input(class='form-control mr-sm-2', type='search', placeholder='Search', name='location')
+          select(name='countries' id='country-select' class='custom-select')
+            option(value='') Please select a country
+            option(value='AF') Afghanistan
+            option(value='AX') Åland Islands
+            option(value='AL') Albania
+            option(value='DZ') Algeria
+            option(value='AS') American Samoa
+            option(value='AD') Andorra
+            option(value='AO') Angola
+            option(value='AI') Anguilla
+            option(value='AQ') Antarctica
+            option(value='AG') Antigua and Barbuda
+            option(value='AR') Argentina
+            option(value='AM') Armenia
+            option(value='AW') Aruba
+            option(value='AU') Australia
+            option(value='AT') Austria
+            option(value='AZ') Azerbaijan
+            option(value='BS') Bahamas
+            option(value='BH') Bahrain
+            option(value='BD') Bangladesh
+            option(value='BB') Barbados
+            option(value='BY') Belarus
+            option(value='BE') Belgium
+            option(value='BZ') Belize
+            option(value='BJ') Benin
+            option(value='BM') Bermuda
+            option(value='BT') Bhutan
+            option(value='BO') Bolivia
+            option(value='BA') Bosnia and Herzegovina
+            option(value='BW') Botswana
+            option(value='BV') Bouvet Island
+            option(value='BR') Brazil
+            option(value='IO') British Indian Ocean Territory
+            option(value='BN') Brunei Darussalam
+            option(value='BG') Bulgaria
+            option(value='BF') Burkina Faso
+            option(value='BI') Burundi
+            option(value='KH') Cambodia
+            option(value='CM') Cameroon
+            option(value='CA') Canada
+            option(value='CV') Cape Verde
+            option(value='KY') Cayman Islands
+            option(value='CF') Central African Republic
+            option(value='TD') Chad
+            option(value='CL') Chile
+            option(value='CN') China
+            option(value='CX') Christmas Island
+            option(value='CC') Cocos (Keeling) Islands
+            option(value='CO') Colombia
+            option(value='KM') Comoros
+            option(value='CK') Cook Islands
+            option(value='CR') Costa Rica
+            option(value='CI') Côte d'Ivoire
+            option(value='HR') Croatia
+            option(value='CU') Cuba
+            option(value='CY') Cyprus
+            option(value='CZ') Czech Republic
+            option(value='CD') Democratic Republic of the Congo
+            option(value='DK') Denmark
+            option(value='DJ') Djibouti
+            option(value='DM') Dominica
+            option(value='DO') Dominican Republic
+            option(value='EC') Ecuador
+            option(value='EG') Egypt
+            option(value='SV') El Salvador
+            option(value='GQ') Equatorial Guinea
+            option(value='ER') Eritrea
+            option(value='EE') Estonia
+            option(value='ET') Ethiopia
+            option(value='FK') Falkland Islands
+            option(value='FO') Faroe Islands
+            option(value='FJ') Fiji
+            option(value='FI') Finland
+            option(value='FR') France
+            option(value='GF') French Guiana
+            option(value='PF') French Polynesia
+            option(value='TF') French Southern Territories
+            option(value='GA') Gabon
+            option(value='GM') Gambia
+            option(value='GE') Georgia
+            option(value='DE') Germany
+            option(value='GH') Ghana
+            option(value='GI') Gibraltar
+            option(value='GR') Greece
+            option(value='GL') Greenland
+            option(value='GD') Grenada
+            option(value='GP') Guadeloupe
+            option(value='GU') Guam
+            option(value='GT') Guatemala
+            option(value='GG') Guernsey
+            option(value='GN') Guinea
+            option(value='GW') Guinea-Bissau
+            option(value='GY') Guyana
+            option(value='HT') Haiti
+            option(value='HM') Heard Island and McDonald Islands
+            option(value='VA') Holy See (Vatican City State)
+            option(value='HN') Honduras
+            option(value='HK') Hong Kong
+            option(value='HU') Hungary
+            option(value='IS') Iceland
+            option(value='IN') India
+            option(value='ID') Indonesia
+            option(value='IR') Iran
+            option(value='IQ') Iraq
+            option(value='IE') Ireland
+            option(value='IM') Isle of Man
+            option(value='IL') Israel
+            option(value='IT') Italy
+            option(value='JM') Jamaica
+            option(value='JP') Japan
+            option(value='JE') Jersey
+            option(value='JO') Jordan
+            option(value='KZ') Kazakhstan
+            option(value='KE') Kenya
+            option(value='KI') Kiribati
+            option(value='KP') North Korea
+            option(value='KR') South Korea
+            option(value='KW') Kuwait
+            option(value='KG') Kyrgyzstan
+            option(value='LA') Laos
+            option(value='LV') Latvia
+            option(value='LB') Lebanon
+            option(value='LS') Lesotho
+            option(value='LR') Liberia
+            option(value='LY') Libya
+            option(value='LI') Liechtenstein
+            option(value='LT') Lithuania
+            option(value='LU') Luxembourg
+            option(value='MO') Macao
+            option(value='MK') Macedonia
+            option(value='MG') Madagascar
+            option(value='MW') Malawi
+            option(value='MY') Malaysia
+            option(value='MV') Maldives
+            option(value='ML') Mali
+            option(value='MT') Malta
+            option(value='MH') Marshall Islands
+            option(value='MQ') Martinique
+            option(value='MR') Mauritania
+            option(value='MU') Mauritius
+            option(value='YT') Mayotte
+            option(value='MX') Mexico
+            option(value='FM') Micronesia
+            option(value='MD') Moldova
+            option(value='MC') Monaco
+            option(value='MN') Mongolia
+            option(value='ME') Montenegro
+            option(value='MS') Montserrat
+            option(value='MA') Morocco
+            option(value='MZ') Mozambique
+            option(value='MM') Myanmar
+            option(value='NA') Namibia
+            option(value='NR') Nauru
+            option(value='NP') Nepal
+            option(value='NL') Netherlands
+            option(value='AN') Netherlands Antilles
+            option(value='NC') New Caledonia
+            option(value='NZ') New Zealand
+            option(value='NI') Nicaragua
+            option(value='NE') Niger
+            option(value='NG') Nigeria
+            option(value='NU') Niue
+            option(value='NF') Norfolk Island
+            option(value='MP') Northern Mariana Islands
+            option(value='NO') Norway
+            option(value='OM') Oman
+            option(value='PK') Pakistan
+            option(value='PW') Palau
+            option(value='PS') Palestine
+            option(value='PA') Panama
+            option(value='PG') Papua New Guinea
+            option(value='PY') Paraguay
+            option(value='PE') Peru
+            option(value='PH') Philippines
+            option(value='PN') Pitcairn
+            option(value='PL') Poland
+            option(value='PT') Portugal
+            option(value='PR') Puerto Rico
+            option(value='QA') Qatar
+            option(value='CG') Republic of the Congo
+            option(value='RE') Réunion
+            option(value='RO') Romania
+            option(value='RU') Russian Federation
+            option(value='RW') Rwanda
+            option(value='BL') Saint Barthélemy
+            option(value='SH') Saint Helena
+            option(value='KN') Saint Kitts and Nevis
+            option(value='LC') Saint Lucia
+            option(value='MF') Saint Martin (French part)
+            option(value='PM') Saint Pierre and Miquelon
+            option(value='VC') Saint Vincent and the Grenadines
+            option(value='WS') Samoa
+            option(value='SM') San Marino
+            option(value='ST') Sao Tome and Principe
+            option(value='SA') Saudi Arabia
+            option(value='SN') Senegal
+            option(value='RS') Serbia
+            option(value='SC') Seychelles
+            option(value='SL') Sierra Leone
+            option(value='SG') Singapore
+            option(value='SK') Slovakia
+            option(value='SI') Slovenia
+            option(value='SB') Solomon Islands
+            option(value='SO') Somalia
+            option(value='ZA') South Africa
+            option(value='GS') South Georgia and the South Sandwich Islands
+            option(value='ES') Spain
+            option(value='LK') Sri Lanka
+            option(value='SD') Sudan
+            option(value='SR') Suriname
+            option(value='SJ') Svalbard and Jan Mayen
+            option(value='SZ') Swaziland
+            option(value='SE') Sweden
+            option(value='CH') Switzerland
+            option(value='SY') Syrian Arab Republic
+            option(value='TW') Taiwan
+            option(value='TJ') Tajikistan
+            option(value='TZ') Tanzania
+            option(value='TH') Thailand
+            option(value='TL') Timor-Leste
+            option(value='TG') Togo
+            option(value='TK') Tokelau
+            option(value='TO') Tonga
+            option(value='TT') Trinidad and Tobago
+            option(value='TN') Tunisia
+            option(value='TR') Turkey
+            option(value='TM') Turkmenistan
+            option(value='TC') Turks and Caicos Islands
+            option(value='TV') Tuvalu
+            option(value='UG') Uganda
+            option(value='UA') Ukraine
+            option(value='AE') United Arab Emirates
+            option(value='GB') United Kingdom
+            option(value='US') United States
+            option(value='UY') Uruguay
+            option(value='UZ') Uzbekistan
+            option(value='VU') Vanuatu
+            option(value='VE') Venezuela
+            option(value='VN') Viet Nam
+            option(value='VG') Virgin Islands, British
+            option(value='VI') Virgin Islands, U.S.
+            option(value='WF') Wallis and Futuna
+            option(value='EH') Western Sahara
+            option(value='YE') Yemen
+            option(value='ZM') Zambia
+            option(value='ZW') Zimbabwe
           button(class='btn btn-light btn-outline-primary my-2 my-sm-0', type='submit') Search
     main(role='main', class='container')
       div(class='container')
-        section(class='content')
-          block content
+        block content
     footer(class='main-footer')
-        div(class='container')
-            div(class='row text-center')
-                div(class='col fixed-bottom') &copy; Nicholas Ngare. All rights reserved.
+      div(class='container')
+        div(class='row text-center')
+          div(class='col') &copy; Nicholas Ngare. All rights reserved.
     script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js', integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj', crossorigin='anonymous')
     script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js', integrity='sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN', crossorigin='anonymous')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js', integrity='sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV', crossorigin='anonymous')
